--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GlobalGrade.Light"
-
         tools:targetApi="31">
+        <activity
+            android:name=".M3_Android_Grade"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
